--- a/assets/index.css
+++ b/assets/index.css
@@ -23,12 +23,12 @@
     z-index: 2;
 }
 
-.cloud-left {
-    animation: clouds 7s infinite ease-in-out alternate;
+.cloud_left {
+    animation: clouds 6s infinite ease-in-out alternate;
 }
 
-.cloud-right {
-    animation: clouds 6.6s infinite ease-in-out alternate-reverse;
+.cloud_right {
+    animation: clouds 5.5s infinite ease-in-out alternate-reverse;
 }
 
 .page__cloud img {
@@ -40,10 +40,10 @@
 
 @keyframes clouds {
     0% {
-        transform: rotate(-5deg);
+        transform: rotate(-8deg);
     }
     100% {
-        transform: rotate(5deg);
+        transform: rotate(8deg);
     }
 }
 
